typewire/tests/compile_fail/from_and_try_from.stderr
error: cannot combine `from` and `try_from` — use one or the other
 --> tests/compile_fail/from_and_try_from.rs:5:8
  |
5 | struct Bad(String);
  |        ^^^
